<resources>
    <string name="app_name">ZipLoan Team</string>
    <string name="want_to_logout">Are you sure, you want to logout?</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="something_went_wrong">Something went wrong, try again.</string>
    <string name="enter_valid_otp">Please enter valid OTP</string>
    <string name="application_is_queue">Your application is in queue to upload, You will be notified after successfully completion. You may close the app.</string>
    <string name="aadhaar_matched">Aadhaar Number and otp matched successfully!</string>
    <string name="aadhaar_not_matched">Aadhaar Number and otp did not matched!</string>
    <string name="choose_valid_type">Please choose valid user type.</string>
    <string name="valid_username">Please enter valid username.</string>
    <string name="valid_pasword">Please enter valid password.</string>
    <string name="valid_otp">Please enter valid otp.</string>
    <string name="incorrent_credentials">Credentials are incorrect.</string>
    <string name="merging_files_topdf">Merging files to pdf...</string>
    <string name="menu_filter">Filter</string>
    <string name="attachment_uploading_failed">Attachment uploading failed. Please check your internet connection and try again.</string>
    <string name="want_to_request_topup">Are you sure you want to request for Top Up?</string>
    <string name="want_email_soa">Are you sure you want to email SOA.</string>
    <string name="top_up_request_success">Top Up request for this Loan Account has been successfully registered</string>
    <string name="email_soa_success">SOA has been send successfully to given email.</string>
    <string name="menu_super_user">TRACK</string>
    <string name="no_data_found">No data found</string>
    <string name="add_more_questions"><u>Add more questions</u></string>
    <string name="session_expired">Session Expired, Please Re-Login</string>

    <string name="allow_this_permission_to_proceed">Please allow %s permission to proceed with app</string>
    <string name="location_permission_name">LOCATION</string>

    <item name="question_id" type="id" />
    <item name="position_id" type="id" />
    <string name="primary_bank">Primary Bank</string>
    <string name="secondary_bank">Secondary Bank</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="total_debit">Total Debit</string>
    <string name="total_credit">Total Credit</string>
    <string name="total_bounces">Total Outward Bounces</string>
    <string name="cash_deposited">Cash Deposited</string>
    <string name="credit_header">Credit</string>
    <string name="cibil_info">Primery CIBIL</string>
    <string name="sec_cibil_info">Secondary CIBIL</string>
    <string name="account_type">Account</string>
    <string name="type">Type</string>
    <string name="sanctionad_amound">Sanctioned Amount(INR)</string>
    <string name="current_amount">Current Balance(INR)</string>
    <string name="date_opened">Date Opened</string>
    <string name="date_reported">Date Reported</string>
    <string name="emi">EMI</string>
    <string name="select_anser">Select Answer</string>
    <string name="email">Email</string>
    <string name="reference_name_error">Reference Name is mandatory</string>
    <string name="reference_mobile_error">Reference Mobile is mandatory</string>
    <string name="loan_details">Loan Details</string>
    <string name="loan_amount">Loan amount</string>
    <string name="sales_manager">Sales Manager Name :</string>
    <string name="fill_mandatroy_questions">Fill Mandatory Questions marked with *.</string>
    <string name="lender_name">Lender Name :</string>
    <string name="sales_manager_number">Sales Manager Number :</string>
    <string name="collection_home">Application List</string>
    <string name="search_hint">Search by business &amp; customer name, application no.</string>
    <string name="collection_detail">APPLICATION DETAILS</string>
    <string name="business_addess">Business Address</string>
    <string name="get_direction">Get Direction</string>
    <string name="resident_addess">Residential Address</string>
    <string name="loan_details_text">Loan Details</string>
    <string name="loan_amount_text">Loan Amount</string>
    <string name="emi_amount_text">EMI Amount</string>
    <string name="principle_outstanding">Principal Outstanding</string>
    <string name="forecloser_text">Foreclosure Amount</string>
    <string name="view_breakup">View Breakup</string>
    <string name="past_visit">PAST VISIT</string>
    <string name="record_visit">RECORD NEW VISIT</string>
    <string name="record_visit_cash">RECORD NEW VISIT CASH</string>
    <string name="record_visit_cheque">RECORD NEW VISIT CHEQUE</string>
    <string name="view_kyc">VIEW KYC DOC</string>
    <string name="view_soa">VIEW SOA</string>
    <string name="reset">RESET</string>
    <string name="save">SAVE</string>
    <string name="search">Search</string>
    <string name="bucket_text">Delinquency Buckets</string>
    <string name="pincode">Pincode</string>
    <string name="mobile">Enter new number here</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_number">Edit Number</string>
    <string name="kyc_text">KYC Documents</string>
    <string name="aadhar_text">Aadhaar Card</string>
    <string name="view">View</string>
    <string name="pan_text">Pan Card</string>
    <string name="loan_text">Loan Application Form</string>
    <string name="bill_text">Utility Bills</string>
    <string name="person_met_hint">Person Met *</string>
    <string name="reason">Reason*</string>
    <string name="overdue_text">Overdue Amount Breakup</string>
    <string name="breakup_text">Breakup of Due Date 15.06.2018</string>
    <string name="principle_amount">Principal Amount</string>
    <string name="interest_amount">Interest Amount</string>
    <string name="amount_pending">Amount Pending</string>
    <string name="overdue_amount_text">Overdue Charges</string>
    <string name="penal_charges">Penal Charges</string>
    <string name="bouncing_charges">Bouncing Charges</string>
    <string name="due_for_emi">Days Past Due for the EMI</string>
    <string name="past_vist">Past Visit Details</string>
    <string name="person_met_text">Person Met</string>
    <string name="date_of_visit">Date of Visit</string>
    <string name="comments">Comments</string>
    <string name="overdue_breakup_text">OVERDUE BREAKUP</string>
    <string name="soa_text">SOA Documents</string>
    <string name="loan_app_text">Loan Application Form</string>
    <string name="utility_bill">Utility Bills</string>
    <string name="view_soa_documents">View SOA Documents</string>
    <string name="view_kyc_documents">VIEW KYC DOCUMENTS</string>
    <string name="amount_collected">Amount Collected</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="payment_mode_text">Payment Mode</string>
    <string name="cash">CASH</string>
    <string name="cheque">CHEQUE</string>
    <string name="cash_details">Cash Details</string>
    <string name="txt_2000">Rs.2000</string>
    <string name="txt_500">Rs.500</string>
    <string name="txt_200">Rs.200</string>
    <string name="txt_100">Rs.100</string>
    <string name="txt_50">Rs.50</string>
    <string name="txt_20">Rs.20</string>
    <string name="txt_10">Rs.10</string>
    <string name="txt_5">Rs.5</string>
    <string name="txt_2">Rs.2</string>
    <string name="txt_1">Rs.1</string>
    <string name="total_amount_text">Total amount collected</string>
    <string name="total_amount_to_collect">Amount to Collect</string>
    <string name="take_reciept">TAKE PHOTO OF CHEQUE</string>
    <string name="bank_name_hint">Bank Name *</string>
    <string name="checque_hint">Cheque No*</string>
    <string name="amount_hint">Amount*</string>
    <string name="date_hint">Date*</string>
    <string name="ifsc_hint">IFSC Code*</string>
    <string name="invalid_field">Invalid Field</string>
    <string name="success_message">Your request has been submitted successfully</string>
    <string name="no_past_vist">There is no past visit</string>
    <string name="no_application">No Application</string>

    <string name="person_met_empty">This field is invalid!</string>
    <string name="person_met">Have you met the person? *</string>
    <string name="person_met_no">Have you met the person? * No </string>
    <string name="person_met_yes">Have you met the person? * Yes </string>
    <string name="emi_amount_large">Amount can not be more than </string>
    <string name="comment_hint">Comment</string>
    <string name="reference_hint">Reference no.*</string>
    <string name="upload_check_image">Upload cheque image</string>
    <string name="or_text">OR</string>
    <string name="recroeded_succesfully">Record Saved successfully!</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_address_hint">Edit new address here</string>
    <string name="amount_collect_hint">Amount Collected by - </string>
    <string name="press_exit">Press again to exit</string>
    <string name="past_visit_location">See past visit location</string>
    <string name="reference_numbers">Reference Numbers</string>
    <string name="view_doc">View Doc</string>
    <string name="no_internet">Waiting for network&#8230;</string>
    <string name="no_kyc_doc">No KYC Doc Available</string>
    <string name="update_app">Update App</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="update_app_message">Update app to see latest improved features!</string>
    <string name="select_bank_name">Please select bank name</string>
    <string name="receipt_hint">Receipt will be sent to this number</string>
    <string name="invalid_mobile">Invalid Mobile Number!</string>
    <string name="mobile_hint">Mobile</string>
    <string name="co_applicant_text">Co-Applicants</string>
    <string name="place_hint">Place where EMI repaid</string>
    <string name="ptp_hint">PTP status</string>
    <string name="feature">Feature</string>
    <string name="value">Value</string>
    <string name="score">Score</string>
    <string name="bv">Business Verification(BV)</string>
    <string name="business_photes">Business Place Photos</string>
    <string name="rv">Residence Verification(RV)</string>
    <string name="invalid_bank_code">Please select a bank name from dropdown list</string>
    <string name="pdf_show_local_progress_title">File Downloading</string>
    <string name="pdf_show_online_dialog_title">Open PDF</string>
    <string name="pdf_show_online_dialog_question">Are you sure want to open file</string>
    <string name="pdf_show_online_dialog_button_no">NO</string>
    <string name="pdf_show_online_dialog_button_yes">YES</string>
    <string name="pdf_show_local_progress_content">\"\"</string>
    <string name="nature_of_work_detail">Nature of work details</string>
    <string name="reason_to_change_address">Reason for changing business place?</string>
    <string name="change_place">Reason for changing business place?</string>
    <string name="esign_details">E-sign Related Fields</string>
    <string name="esign_docs">E-sign Related Documents</string>
    <string name="hfeet_hint">5\'</string>
    <string name="inches">3\"</string>

</resources>
