<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_marginBottom="@dimen/dp_20"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:shrinkColumns="3"
    android:padding="@dimen/dp_10"
    android:stretchColumns="*"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="60"
            android:text="@string/feature"
            android:id="@+id/feature"
            android:textStyle="bold"
            android:padding="3dip" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="20"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/value"
            android:text="@string/value"
            android:padding="3dip"
            android:gravity="end"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="20"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/score"
            android:id="@+id/score"
            android:padding="3dip"
            android:gravity="end"/>
    </TableRow>

</TableLayout>