<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:background="@color/white"
        android:layout_margin="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close_img"
            android:padding="@dimen/dp_15"
            android:layout_gravity="center_vertical|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/met_switch"
            style="@style/SwitchCompatTheme"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/person_met"
            app:switchPadding="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_person_met"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:enabled="false"
                android:layout_width="match_parent"
                android:hint="@string/person_met_hint"
                android:id="@+id/personal_met"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ts_14"
                android:textColorHint="@color/color_212121"
                android:textColor="@color/color_212121"
                android:fontFamily="@font/larsseit_medium"
                android:theme="@style/normal_qty_edit_style"
                android:backgroundTint="@color/edit_text_stroke_color_common"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_30"
            android:fontFamily="@font/larsseit_medium"
            android:gravity="center_vertical"
            android:text="@string/reason"
            android:id="@+id/layout_reason_text"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_14" />
        <EditText
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_14"
            android:background="@drawable/reason_outline"
            android:padding="@dimen/dp_20"
            android:layout_width="match_parent"
            android:id="@+id/reason_text"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/larsseit_medium"
            android:text="@string/person_met_empty"
            android:visibility="gone"
            android:id="@+id/layout_reason_invalid"
            android:textColor="@color/f61c00"
            android:textSize="@dimen/ts_14" />
        <Button
            android:id="@+id/submit_no_person"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:theme="@style/btn_orange_style"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_flat_orange"
            android:text="@string/submit"/>

</LinearLayout>
    </FrameLayout>
    </ScrollView>
</layout>